--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -6,6 +6,7 @@
   border-radius: 8px;
   width: 400px;
   overflow: hidden;
+  margin: 0 auto;
 }
 
 .card_content {
@@ -15,7 +16,7 @@
 }
 
 .avatar {
-  width: 50%;
+  width: 40%;
   display: block;
   background-color: black;
   border-radius: 50%;
@@ -60,4 +61,8 @@
 .stats_list_item:nth-child(1),
 .stats_list_item:nth-child(2) {
   border-right: 1px solid gray;
+}
+
+.stats_data {
+  font-weight: bold;
 }
